# holoscan-sdk

examples/: CMakeLists.txt  README.md
examples/external_memory/: CMakeLists.txt  README.md
examples/external_memory/cpp/: CMakeLists.min.txt  CMakeLists.txt  external_memory.cpp
examples/pointer_transfer_benchmark/: CMakeLists.txt  README.md
examples/pointer_transfer_benchmark/cpp/: CMakeLists.min.txt  CMakeLists.txt  pointer_transfer_benchmark.cpp
include/holoscan/core/executors/gxf/: gxf_executor.hpp
python/holoscan/operators/holoviz/: __init__.py
python/tests/unit/: test_resources.py
tests/codecs/: codecs.cpp
